# palomares-datacleaner

./: .gitignore  README.md  pyproject.toml  pyptoject.toml  requirements-dev.txt
datacleaner/: cleaner.py
notebook/: notebook.ipynb
tests/: test_cast_columns.py  test_clean_dups.py  test_clean_nulls.py  test_clean_outliers.py  test_display_outliers.py  test_evaluate_null_strategy.py  test_get_bounds.py  test_handle_outliers_col.py  test_iter_outlier_columns.py
