[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "palomares-datacleaner"
version = "0.1.0"
description = "Utilidad para limpieza simple de DataFrames de pandas"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nicolas Palomares", email = "palomaresnicolas4@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pandas"]

[project.urls]
Repository = "https://github.com/NicolasPalomaresDS/palomares-datacleaner"